--- a/Stats_Data.ipynb
+++ b/Stats_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "operating-figure",
+   "id": "boolean-hamburg",
    "metadata": {},
    "source": [
     "### Necessary Imports"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "operational-guarantee",
+   "id": "korean-falls",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "helpful-recycling",
+   "id": "finished-universal",
    "metadata": {},
    "source": [
     "### Change Directory For Data"
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "brilliant-synthetic",
+   "id": "isolated-indianapolis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hundred-greene",
+   "id": "palestinian-oregon",
    "metadata": {},
    "source": [
     "### Append File Names"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "stylish-collar",
+   "id": "green-wednesday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opponent-liberal",
+   "id": "diagnostic-metadata",
    "metadata": {},
    "source": [
     "### Code For Generating Mean & Standard Deviation"
@@ -69,14 +69,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "timely-technical",
+   "id": "static-crazy",
    "metadata": {},
    "source": [
     "###### Steps:\n",
     "1. Iterates each file.\n",
     "2. Iterates each line.\n",
-    "3. Creates a list a words present in the file.\n",
-    "4. Iterates through a list of words.\n",
+    "3. Creates a list of words present in the file.\n",
+    "4. Iterates through the list of words.\n",
     "5. Appends length of each word in a list named \"len_word\" .\n",
     "6. Calculates Mean and Standard Deviation for the above list."
    ]
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "uniform-weekly",
+   "id": "sitting-donor",
    "metadata": {},
    "outputs": [
     {
