--- a/Stats_Data.ipynb
+++ b/Stats_Data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "korean-falls",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,9 @@
     "import glob\n",
     "import os\n",
     "import statistics as st\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from collections import Counter"
    ]
   },
   {
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "isolated-indianapolis",
    "metadata": {},
    "outputs": [],
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "green-wednesday",
    "metadata": {},
    "outputs": [],
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "id": "sitting-donor",
    "metadata": {},
    "outputs": [
@@ -93,9 +95,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "    values  weights\n",
+      "0        1        3\n",
+      "1        2       13\n",
+      "2        3       12\n",
+      "3        4        3\n",
+      "4        5        4\n",
+      "5        6        8\n",
+      "6        7        2\n",
+      "7        8        5\n",
+      "8        9        6\n",
+      "9       10        4\n",
+      "10      11        6\n",
+      "11      12        1\n",
+      "12      13        1\n",
+      "13      14        1\n",
+      "14      15        1\n",
+      "15      17        1\n",
+      "16      18        1\n",
       "Mean : 6.22 \n",
-      "Standard Deviation : 4 \n",
-      "Weighted Average : 8.88 \n"
+      "Standard Deviation : 4.09 \n",
+      "Weighted Average : 6.22 \n"
      ]
     }
    ],
@@ -109,21 +129,32 @@
     "            for word in words:\n",
     "                len_word.append(len(word))\n",
     "\n",
-    "weighted_avg = np.average(len_word, weights=len_word)\n",
+    "# Calculating Mean\n",
+    "mean = round(st.mean(len_word),2)\n",
     "\n",
-    "print(\"Mean : {} \".format(round(st.mean(len_word),2)))\n",
+    "# Calculating Standard Deviation\n",
+    "stdev = round(st.stdev(len_word),2)\n",
     "\n",
-    "print(\"Standard Deviation : {} \".format(round(st.stdev(len_word))))\n",
+    "# Segregating values and their weights\n",
+    "len_word.sort()\n",
+    "df = pd.DataFrame([[x,len_word.count(x)] for x in set(len_word)], columns = ['values', 'weights'])\n",
+    "\n",
+    "print(df)\n",
+    "\n",
+    "# Calculating Weighted Average\n",
+    "weighted_avg = np.average(df['values'], weights=df['weights'])\n",
+    "\n",
+    "print(\"Mean : {} \".format(mean))\n",
+    "\n",
+    "print(\"Standard Deviation : {} \".format(stdev))\n",
     "\n",
     "print(\"Weighted Average : {} \".format(round(weighted_avg,2)))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "australian-regression",
+   "cell_type": "markdown",
+   "id": "severe-centre",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
